# MarkerBoardTracker

./: .gitignore
MarkerBoardTracking/: .gitignore
MarkerBoardTracking/camera_calibration/: CMakeLists.txt  camera_calibration.cpp
ad_embeder_python/: ad_unit_detection.py  demo.py  embedding_ad.py  extracting_ad_units.py  filter_ad_units.py  get_video_meta.py  kalman.py  kp_track.py  tracking_ad_units.py  util.py
bg_sub/: CMakeCache.txt  CMakeLists.txt  Makefile  bg_sub  bg_sub.cpp  cmake_install.cmake
board_replacer/: CMakeCache.txt  Makefile  board_replacer  board_replacer.cpp  cmake_install.cmake
board_replacer_pipeline/: CMakeLists.txt
board_tracker/: CMakeCache.txt  CMakeLists.txt  Makefile  board_tracker  board_tracker.cpp  cameraCalibration  cmake_install.cmake
calibration/: CMakeCache.txt  CMakeLists.txt  Makefile  calibration  cameraCalibration  cmake_install.cmake
color_tracker/: CMakeLists.txt  color_tracker.cpp
curl_test/: CMakeLists.txt  Makefile  cmake_install.cmake  curl_test.cpp
dictionary_4x4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dictionary  dictionary.cpp
dictionary_6x6/: CMakeCache.txt  Makefile  cmake_install.cmake  dictionary  dictionary.cpp
fillconvex/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fillconvex  fillconvexpoly.cpp
marker_tracker/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  marker_tracker  marker_tracker.cpp
simple_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  simple  simple.cpp
transparent_background/: CMakeLists.txt  (+2 more)
(+13 files in other folders)
