cmake_minimum_required(VERSION 2.8)
project (board_replacer)
set(CMAKE_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/lib/cmake/ )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(board_replacer board_replacer.cpp)
target_link_libraries(board_replacer ${OpenCV_LIBS} )
